commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.messagecompose.yml
@@ -484,8 +484,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var conversationId = Office.context.mailbox.item.conversationId;
-      console.log("conversationId: " + conversationId);
+      console.log(`Conversation ID: ${Office.context.mailbox.item.conversationId}`);
       ```
     name: conversationId
     fullName: conversationId
