--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointmentread.yml
@@ -324,8 +324,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeCreated = Office.context.mailbox.item.dateTimeCreated;
-      console.log("Date and time created: " + dateTimeCreated);
+      console.log(`Creation date and time: ${Office.context.mailbox.item.dateTimeCreated}`);
       ```
     name: dateTimeCreated
     fullName: dateTimeCreated
@@ -350,8 +349,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeModified = Office.context.mailbox.item.dateTimeModified;
-      console.log("Date and time modified: " + dateTimeModified);
+      console.log(`Date and time item last modified: ${Office.context.mailbox.item.dateTimeModified}`);
       ```
     name: dateTimeModified
     fullName: dateTimeModified
@@ -605,8 +603,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var end = Office.context.mailbox.item.end;
-      console.log("Appointment end: " + end);
+      console.log(`Appointment ends: ${Office.context.mailbox.item.end}`);
       ```
     name: end
     fullName: end
@@ -633,17 +630,23 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.enhancedLocation.getAsync(callbackFunction);
-
-      function callbackFunction(asyncResult) {
-          asyncResult.value.forEach(function (place) {
-              console.log("Display name: " + place.displayName);
-              console.log("Type: " + place.locationIdentifier.type);
-              if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
-                  console.log("Email address: " + place.emailAddress);
-              }
+      Office.context.mailbox.item.enhancedLocation.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Failed to get locations. Error message: ${result.error.message}`);
+          return;
+        }
+        var places = result.value;
+        if (places && places.length > 0) {
+          result.value.forEach(function(place) {
+            console.log(`Location: ${place.displayName} (type: ${place.locationIdentifier.type})`);
+            if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
+              console.log("Email address: " + place.emailAddress);
+            }
           });
-      }
+        } else {
+          console.log("There are no locations.");
+        }
+      });
       ```
     name: enhancedLocation
     fullName: enhancedLocation
@@ -872,7 +875,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.AppointmentRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.AppointmentRead#getFilteredEntitiesByName:member(1)'
@@ -1450,6 +1453,9 @@ items:
       var location = Office.context.mailbox.item.location;
       console.log("location: " + location);
       ```
+      ```javascript
+      console.log(`Appointment location: ${Office.context.mailbox.item.location}`);
+      ```
     name: location
     fullName: location
     langs:
@@ -1473,8 +1479,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var normalizedSubject = Office.context.mailbox.item.normalizedSubject;
-      console.log("Normalized subject: " + normalizedSubject);
+      console.log(`Normalized subject: ${Office.context.mailbox.item.normalizedSubject}`);
       ```
     name: normalizedSubject
     fullName: normalizedSubject
@@ -1642,7 +1647,7 @@ items:
       } else if (recurrence === null) {
         console.log("This is a single appointment.");
       } else {
-        console.log(recurrence);
+        console.log(JSON.stringify(recurrence));
       }
       ```
     name: recurrence
