--- a/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.appointmentcompose.yml
@@ -774,6 +774,33 @@ items:
           }
       });
       ```
+      ```javascript
+      Office.context.mailbox.item.end.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Appointment ends: ${result.value}`);
+      });
+      ```
+      ```javascript
+      Office.context.mailbox.item.start.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Get start date failed with message ${result.error.message}`);
+          return;
+        }
+
+        var end = result.value; // Set end to current start date and time.
+        end.setDate(end.getDate() + 1); // Set end as 1 day later than start date.
+        Office.context.mailbox.item.end.setAsync(end, (result) => {
+          if (result.status !== Office.AsyncResultStatus.Succeeded) {
+            console.error(`Set end date failed with message ${result.error.message}`);
+            return;
+          }
+          console.log(`Successfully set end date and time to ${end}`);
+        });
+      });
+      ```
     name: end
     fullName: end
     langs:
@@ -797,34 +824,61 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var locations = [
-          {
-              "id": "Contoso",
-              "type": Office.MailboxEnums.LocationType.Custom
-          }
-      ];
-      Office.context.mailbox.item.enhancedLocation.addAsync(locations);
-
-      Office.context.mailbox.item.enhancedLocation.getAsync(callbackFunction);
-
-      function callbackFunction(asyncResult) {
-          asyncResult.value.forEach(function (place) {
-              console.log("Display name: " + place.displayName);
-              console.log("Type: " + place.locationIdentifier.type);
-              if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
-                  console.log("Email address: " + place.emailAddress);
-              }
+      Office.context.mailbox.item.enhancedLocation.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Failed to get locations. Error message: ${result.error.message}`);
+          return;
+        }
+        var places = result.value;
+        if (places && places.length > 0) {
+          result.value.forEach(function(place) {
+            console.log(`Location: ${place.displayName} (type: ${place.locationIdentifier.type})`);
+            if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
+              console.log("Email address: " + place.emailAddress);
+            }
           });
-      }
+        } else {
+          console.log("There are no locations.");
+        }
+      });
       ```
       ```javascript
-      Office.context.mailbox.item.enhancedLocation.getAsync(callbackFunction);
-
-      function callbackFunction(asyncResult) {
-          asyncResult.value.forEach(function (currentValue) {
-              Office.context.mailbox.item.enhancedLocation.removeAsync([currentValue.locationIdentifier]);
-          });
-      }
+      var locations = [
+        {
+          id: "Contoso",
+          type: Office.MailboxEnums.LocationType.Custom
+        },
+        {
+          id: "room500@test.com",
+          type: Office.MailboxEnums.LocationType.Room
+        }
+      ];
+      Office.context.mailbox.item.enhancedLocation.addAsync(locations, (result) => {
+        if (result.status === Office.AsyncResultStatus.Succeeded) {
+          console.log(`Successfully added locations ${JSON.stringify(locations)}`);
+        } else {
+          console.error(`Failed to add locations. Error message: ${result.error.message}`);
+        }
+      });
+      ```
+      ```javascript
+      var locations = [
+        {
+          id: "Contoso",
+          type: Office.MailboxEnums.LocationType.Custom
+        },
+        {
+          id: "room500@test.com",
+          type: Office.MailboxEnums.LocationType.Room
+        }
+      ];
+      Office.context.mailbox.item.enhancedLocation.removeAsync(locations, (result) => {
+        if (result.status === Office.AsyncResultStatus.Succeeded) {
+          console.log(`Successfully removed locations ${JSON.stringify(locations)}`);
+        } else {
+          console.error(`Failed to remove locations. Error message: ${result.error.message}`);
+        }
+      });
       ```
     name: enhancedLocation
     fullName: enhancedLocation
@@ -1428,26 +1482,22 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Set isAllDayEvent property.
-      Office.context.mailbox.item.isAllDayEvent.setAsync(
-          true,
-          function (asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-                  console.log("Failed to set all-day event: " + JSON.stringify(asyncResult.error));
-              } else {
-                  console.log("Appointment set to all-day event.");
-              }
-          });
-
-      // Get isAllDayEvent property.
-      console.log(Office.context.mailbox.item.isAllDayEvent.getAsync(
-          function(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-                  console.log("Is an all-day event? " + asyncResult.value);
-              } else {
-                  console.log("Failed to get if this is an all-day event. Error: " + JSON.stringify(asyncResult.error));
-              }
-          });
+      Office.context.mailbox.item.isAllDayEvent.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Is this an all-day event? " + asyncResult.value);
+        } else {
+          console.log("Failed to get if this is an all-day event. Error: " + JSON.stringify(asyncResult.error));
+        }
+      });
+      ```
+      ```javascript
+      Office.context.mailbox.item.isAllDayEvent.setAsync(true, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+          console.log("Failed to set all-day event: " + JSON.stringify(asyncResult.error));
+        } else {
+          console.log("Appointment set to all-day event.");
+        }
+      });
       ```
     isPreview: true
     name: isAllDayEvent
@@ -1656,6 +1706,25 @@ items:
           var location = asyncResult.value;
       }
       ```
+      ```javascript
+      Office.context.mailbox.item.location.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Appointment location: ${result.value}`);
+      });
+      ```
+      ```javascript
+      var location = "my office";
+      Office.context.mailbox.item.location.setAsync(location, (result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Successfully set location to ${location}`);
+      });
+      ```
     name: location
     fullName: location
     langs:
@@ -1858,42 +1927,54 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // This example gets the Recurrence object of an appointment item.
-      Office.context.mailbox.item.recurrence.getAsync(callback);
-
-      function callback(asyncResult) {
-          var context = asyncResult.context;
-          var recurrence = asyncResult.value;
-          if (!recurrence) {
-              console.log("One-time appointment or meeting");
-          } else {
-              console.log(JSON.stringify(recurrence));
-          }
-      }
-
-      // The following example shows the results of the getAsync call that retrieves the recurrence for a series.
-      // NOTE: In this example, seriesTimeObject is a placeholder for the JSON representing the
-      // recurrence.seriesTime property. You should use the SeriesTime object's methods to get the
-      // recurrence date and time properties.
-      Recurrence = {
-          "recurrenceType": "weekly",
-          "recurrenceProperties": {"interval": 2, "days": ["mon","thu","fri"], "firstDayOfWeek": "sun"},
-          "seriesTime": {seriesTimeObject},
-          "recurrenceTimeZone": {"name": "Pacific Standard Time", "offset": -480}
-      }
-      ```
-      ```javascript
       Office.context.mailbox.item.recurrence.getAsync(function(asyncResult) {
         if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
           var recurrence = asyncResult.value;
           if (recurrence === null) {
             console.log("This is a single appointment.");
           } else {
-            console.log(recurrence);
+            console.log(`Recurrence pattern: ${JSON.stringify(recurrence)}`);
           }
         } else {
           console.error(asyncResult.error);
         }
+      });
+      ```
+      ```javascript
+      // Important: Can only set the recurrence pattern of an appointment series.
+
+      var currentDate = new Date();
+      let seriesTimeObject : Office.SeriesTime;
+      // Set series start date to tomorrow.
+      seriesTimeObject.setStartDate(
+        currentDate.getFullYear(),
+        currentDate.getMonth(),
+        currentDate.getDay() + 1
+      );
+      // Set series end date to 1 month from now.
+      seriesTimeObject.setEndDate(
+        currentDate.getFullYear(),
+        currentDate.getMonth() + 1,
+        currentDate.getDay()
+      );
+      // Set start time to 1:30 PM.
+      seriesTimeObject.setStartTime(13, 30);
+      // Set duration to 30 minutes.
+      seriesTimeObject.setDuration(30);
+
+      let pattern : Office.Recurrence = {
+        seriesTime: seriesTimeObject,
+        recurrenceType: "weekly",
+        recurrenceProperties: { interval: 1, days: ["tue", "thu"], firstDayOfWeek: "sun" },
+        recurrenceTimeZone: { name: "Pacific Standard Time" }
+      };
+
+      Office.context.mailbox.item.recurrence.setAsync(pattern, (asyncResult) => {
+        if (asyncResult.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Failed to set recurrence. Error: ${asyncResult.error.message}`);
+          return;
+        }
+        console.log(`Succeeded in setting recurrence pattern ${JSON.stringify(pattern)}`);
       });
       ```
     name: recurrence
@@ -2273,26 +2354,25 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Set sensitivity property.
+      Office.context.mailbox.item.sensitivity.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Sensitivity: " + asyncResult.value);
+        } else {
+          console.log("Failed to get sensitivity: " + JSON.stringify(asyncResult.error));
+        }
+      });
+      ```
+      ```javascript
       Office.context.mailbox.item.sensitivity.setAsync(
-          Office.MailboxEnums.AppointmentSensitivityType.Confidential,
-          function callback(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-                  console.log("Failed to set appointment sensitivity: " + JSON.stringify(asyncResult.error));
-              } else {
-                  console.log("Successfully set appointment sensitivity.");
-              }
-          });
-
-      // Get sensitivity property.
-      console.log(Office.context.mailbox.item.sensitivity.getAsync(
-          function(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-                  console.log("Sensitivity: " + asyncResult.value);
-              } else {
-                  console.log("Failed to get sensitivity: " + JSON.stringify(asyncResult.error));
-              }
-          });
+        Office.MailboxEnums.AppointmentSensitivityType.Confidential,
+        function callback(asyncResult) {
+          if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+            console.log("Failed to set appointment sensitivity: " + JSON.stringify(asyncResult.error));
+          } else {
+            console.log("Successfully set appointment sensitivity.");
+          }
+        }
+      );
       ```
     isPreview: true
     name: sensitivity
