--- a/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocation.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.enhancedlocation.yml
@@ -41,7 +41,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'addAsync(locationIdentifiers: LocationIdentifier[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResultStatus) => void): void;'
+      content: 'addAsync(locationIdentifiers: LocationIdentifier[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -77,12 +77,22 @@ items:
 
       ```javascript
       var locations = [
-          {
-              "id": "Contoso",
-              "type": Office.MailboxEnums.LocationType.Custom
-          }
+        {
+          id: "Contoso",
+          type: Office.MailboxEnums.LocationType.Custom
+        },
+        {
+          id: "room500@test.com",
+          type: Office.MailboxEnums.LocationType.Room
+        }
       ];
-      Office.context.mailbox.item.enhancedLocation.addAsync(locations);
+      Office.context.mailbox.item.enhancedLocation.addAsync(locations, (result) => {
+        if (result.status === Office.AsyncResultStatus.Succeeded) {
+          console.log(`Successfully added locations ${JSON.stringify(locations)}`);
+        } else {
+          console.error(`Failed to add locations. Error message: ${result.error.message}`);
+        }
+      });
       ```
     name: 'addAsync(locationIdentifiers, callback)'
     fullName: 'addAsync(locationIdentifiers, callback)'
@@ -90,7 +100,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'addAsync(locationIdentifiers: LocationIdentifier[], callback?: (asyncResult: Office.AsyncResultStatus) => void): void;'
+      content: 'addAsync(locationIdentifiers: LocationIdentifier[], callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -146,17 +156,23 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.enhancedLocation.getAsync(callbackFunction);
-
-      function callbackFunction(asyncResult) {
-          asyncResult.value.forEach(function (place) {
-              console.log("Display name: " + place.displayName);
-              console.log("Type: " + place.locationIdentifier.type);
-              if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
-                  console.log("Email address: " + place.emailAddress);
-              }
+      Office.context.mailbox.item.enhancedLocation.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Failed to get locations. Error message: ${result.error.message}`);
+          return;
+        }
+        var places = result.value;
+        if (places && places.length > 0) {
+          result.value.forEach(function(place) {
+            console.log(`Location: ${place.displayName} (type: ${place.locationIdentifier.type})`);
+            if (place.locationIdentifier.type === Office.MailboxEnums.LocationType.Room) {
+              console.log("Email address: " + place.emailAddress);
+            }
           });
-      }
+        } else {
+          console.log("There are no locations.");
+        }
+      });
       ```
     name: getAsync(callback)
     fullName: getAsync(callback)
@@ -191,7 +207,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'removeAsync(locationIdentifiers: LocationIdentifier[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResultStatus) => void): void;'
+      content: 'removeAsync(locationIdentifiers: LocationIdentifier[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -224,13 +240,23 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.enhancedLocation.getAsync(callbackFunction);
-
-      function callbackFunction(asyncResult) {
-          asyncResult.value.forEach(function (currentValue) {
-              Office.context.mailbox.item.enhancedLocation.removeAsync([currentValue.locationIdentifier]);
-          });
-      }
+      var locations = [
+        {
+          id: "Contoso",
+          type: Office.MailboxEnums.LocationType.Custom
+        },
+        {
+          id: "room500@test.com",
+          type: Office.MailboxEnums.LocationType.Room
+        }
+      ];
+      Office.context.mailbox.item.enhancedLocation.removeAsync(locations, (result) => {
+        if (result.status === Office.AsyncResultStatus.Succeeded) {
+          console.log(`Successfully removed locations ${JSON.stringify(locations)}`);
+        } else {
+          console.error(`Failed to remove locations. Error message: ${result.error.message}`);
+        }
+      });
       ```
     name: 'removeAsync(locationIdentifiers, callback)'
     fullName: 'removeAsync(locationIdentifiers, callback)'
@@ -238,7 +264,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'removeAsync(locationIdentifiers: LocationIdentifier[], callback?: (asyncResult: Office.AsyncResultStatus) => void): void;'
+      content: 'removeAsync(locationIdentifiers: LocationIdentifier[], callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -265,16 +291,16 @@ references:
   - uid: 'outlook!Office.AsyncContextOptions:interface'
     name: Office.AsyncContextOptions
   - uid: 'outlook!Office.EnhancedLocation#addAsync~1:complex'
-    name: '(asyncResult: Office.AsyncResultStatus) => void'
-    fullName: '(asyncResult: Office.AsyncResultStatus) => void'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
       - name: '(asyncResult: '
         fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResultStatus:enum'
-        name: Office.AsyncResultStatus
-        fullName: Office.AsyncResultStatus
-      - name: ) => void
-        fullName: ) => void
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.EnhancedLocation#addAsync~2:complex'
     name: 'LocationIdentifier[]'
     fullName: 'Office.LocationIdentifier[]'
@@ -285,16 +311,16 @@ references:
       - name: '[]'
         fullName: '[]'
   - uid: 'outlook!Office.EnhancedLocation#addAsync~3:complex'
-    name: '(asyncResult: Office.AsyncResultStatus) => void'
-    fullName: '(asyncResult: Office.AsyncResultStatus) => void'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
       - name: '(asyncResult: '
         fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResultStatus:enum'
-        name: Office.AsyncResultStatus
-        fullName: Office.AsyncResultStatus
-      - name: ) => void
-        fullName: ) => void
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.EnhancedLocation#getAsync~0:complex'
     name: '(asyncResult: Office.AsyncResult<LocationDetails[]>) => void'
     fullName: '(asyncResult: Office.AsyncResult<Office.LocationDetails[]>) => void'
@@ -337,16 +363,16 @@ references:
       - name: '[]'
         fullName: '[]'
   - uid: 'outlook!Office.EnhancedLocation#removeAsync~1:complex'
-    name: '(asyncResult: Office.AsyncResultStatus) => void'
-    fullName: '(asyncResult: Office.AsyncResultStatus) => void'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
       - name: '(asyncResult: '
         fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResultStatus:enum'
-        name: Office.AsyncResultStatus
-        fullName: Office.AsyncResultStatus
-      - name: ) => void
-        fullName: ) => void
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.EnhancedLocation#removeAsync~2:complex'
     name: 'LocationIdentifier[]'
     fullName: 'Office.LocationIdentifier[]'
@@ -357,13 +383,13 @@ references:
       - name: '[]'
         fullName: '[]'
   - uid: 'outlook!Office.EnhancedLocation#removeAsync~3:complex'
-    name: '(asyncResult: Office.AsyncResultStatus) => void'
-    fullName: '(asyncResult: Office.AsyncResultStatus) => void'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
       - name: '(asyncResult: '
         fullName: '(asyncResult: '
-      - uid: 'outlook!Office.AsyncResultStatus:enum'
-        name: Office.AsyncResultStatus
-        fullName: Office.AsyncResultStatus
-      - name: ) => void
-        fullName: ) => void
+      - uid: 'outlook!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
