--- a/docs/docs-ref-autogen/outlook/outlook/office.isalldayevent.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.isalldayevent.yml
@@ -64,15 +64,13 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get isAllDayEvent property.
-      console.log(Office.context.mailbox.item.isAllDayEvent.getAsync(
-          function(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-                  console.log("Is an all-day event? " + asyncResult.value);
-              } else {
-                  console.log("Failed to get if this is an all-day event. Error: " + JSON.stringify(asyncResult.error));
-              }
-          });
+      Office.context.mailbox.item.isAllDayEvent.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Is this an all-day event? " + asyncResult.value);
+        } else {
+          console.log("Failed to get if this is an all-day event. Error: " + JSON.stringify(asyncResult.error));
+        }
+      });
       ```
     isPreview: true
     name: getAsync(callback)
@@ -142,16 +140,13 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Set isAllDayEvent property.
-      Office.context.mailbox.item.isAllDayEvent.setAsync(
-          true,
-          function (asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-                  console.log("Failed to set all-day event: " + JSON.stringify(asyncResult.error));
-              } else {
-                  console.log("Appointment set to all-day event.");
-              }
-          });
+      Office.context.mailbox.item.isAllDayEvent.setAsync(true, function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+          console.log("Failed to set all-day event: " + JSON.stringify(asyncResult.error));
+        } else {
+          console.log("Appointment set to all-day event.");
+        }
+      });
       ```
     isPreview: true
     name: 'setAsync(isAllDayEvent, callback)'
