--- a/docs/docs-ref-autogen/outlook/outlook/office.sensitivity.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.sensitivity.yml
@@ -61,15 +61,13 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Get sensitivity property.
-      console.log(Office.context.mailbox.item.sensitivity.getAsync(
-          function(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-                  console.log("Sensitivity: " + asyncResult.value);
-              } else {
-                  console.log("Failed to get sensitivity: " + JSON.stringify(asyncResult.error));
-              }
-          });
+      Office.context.mailbox.item.sensitivity.getAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("Sensitivity: " + asyncResult.value);
+        } else {
+          console.log("Failed to get sensitivity: " + JSON.stringify(asyncResult.error));
+        }
+      });
       ```
     isPreview: true
     name: getAsync(callback)
@@ -138,16 +136,16 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      // Set sensitivity property.
       Office.context.mailbox.item.sensitivity.setAsync(
-          Office.MailboxEnums.AppointmentSensitivityType.Confidential,
-          function callback(asyncResult) {
-              if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-                  console.log("Failed to set appointment sensitivity: " + JSON.stringify(asyncResult.error));
-              } else {
-                  console.log("Successfully set appointment sensitivity.");
-              }
-          });
+        Office.MailboxEnums.AppointmentSensitivityType.Confidential,
+        function callback(asyncResult) {
+          if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+            console.log("Failed to set appointment sensitivity: " + JSON.stringify(asyncResult.error));
+          } else {
+            console.log("Successfully set appointment sensitivity.");
+          }
+        }
+      );
       ```
     isPreview: true
     name: 'setAsync(sensitivity, callback)'
