--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.appointmentread.yml
@@ -137,8 +137,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeCreated = Office.context.mailbox.item.dateTimeCreated;
-      console.log("Date and time created: " + dateTimeCreated);
+      console.log(`Creation date and time: ${Office.context.mailbox.item.dateTimeCreated}`);
       ```
     name: dateTimeCreated
     fullName: dateTimeCreated
@@ -163,8 +162,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeModified = Office.context.mailbox.item.dateTimeModified;
-      console.log("Date and time modified: " + dateTimeModified);
+      console.log(`Date and time item last modified: ${Office.context.mailbox.item.dateTimeModified}`);
       ```
     name: dateTimeModified
     fullName: dateTimeModified
@@ -418,8 +416,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var end = Office.context.mailbox.item.end;
-      console.log("Appointment end: " + end);
+      console.log(`Appointment ends: ${Office.context.mailbox.item.end}`);
       ```
     name: end
     fullName: end
@@ -530,7 +527,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.AppointmentRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.AppointmentRead#getFilteredEntitiesByName:member(1)'
@@ -864,6 +861,9 @@ items:
       var location = Office.context.mailbox.item.location;
       console.log("location: " + location);
       ```
+      ```javascript
+      console.log(`Appointment location: ${Office.context.mailbox.item.location}`);
+      ```
     name: location
     fullName: location
     langs:
@@ -887,8 +887,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var normalizedSubject = Office.context.mailbox.item.normalizedSubject;
-      console.log("Normalized subject: " + normalizedSubject);
+      console.log(`Normalized subject: ${Office.context.mailbox.item.normalizedSubject}`);
       ```
     name: normalizedSubject
     fullName: normalizedSubject
