--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.location.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.location.yml
@@ -74,6 +74,18 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      Office.context.mailbox.item.location.getAsync((result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Appointment location: ${result.value}`);
+      });
+      ```
     name: getAsync(callback)
     fullName: getAsync(callback)
     langs:
@@ -148,14 +160,14 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      Office.context.mailbox.item.location.setAsync(
-          "Room 1",
-          function (asyncResult) {
-              if (asyncResult.status === "failed") {
-                  console.log("Action failed with error: " + asyncResult.error.message);
-              }
-          }
-      );
+      var location = "my office";
+      Office.context.mailbox.item.location.setAsync(location, (result) => {
+        if (result.status !== Office.AsyncResultStatus.Succeeded) {
+          console.error(`Action failed with message ${result.error.message}`);
+          return;
+        }
+        console.log(`Successfully set location to ${location}`);
+      });
       ```
     name: 'setAsync(location, callback)'
     fullName: 'setAsync(location, callback)'
