--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.messageread.yml
@@ -362,8 +362,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var conversationId = Office.context.mailbox.item.conversationId;
-      console.log("conversationId: " + conversationId);
+      console.log(`Conversation ID: ${Office.context.mailbox.item.conversationId}`);
       ```
     name: conversationId
     fullName: conversationId
@@ -385,8 +384,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeCreated = Office.context.mailbox.item.dateTimeCreated;
-      console.log("Date and time created: " + dateTimeCreated);
+      console.log(`Creation date and time: ${Office.context.mailbox.item.dateTimeCreated}`);
       ```
     name: dateTimeCreated
     fullName: dateTimeCreated
@@ -411,8 +409,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var dateTimeModified = Office.context.mailbox.item.dateTimeModified;
-      console.log("Date and time modified: " + dateTimeModified);
+      console.log(`Date and time item last modified: ${Office.context.mailbox.item.dateTimeModified}`);
       ```
     name: dateTimeModified
     fullName: dateTimeModified
@@ -662,6 +659,12 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件已阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      console.log(`Appointment ends: ${Office.context.mailbox.item.end}`);
+      ```
     name: end
     fullName: end
     langs:
@@ -993,7 +996,7 @@ items:
 
             使用此方法的最小权限级别是`Restricted`<!-- -->，需要`ReadItem`访问一些实体类型，如下表所示。
 
-            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
+            <table> <tr> <th>EntityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>Contact</td> <td>Contact</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
           type:
             - 'outlook!Office.MessageRead#getEntitiesByType~1:complex'
   - uid: 'outlook!Office.MessageRead#getFilteredEntitiesByName:member(1)'
@@ -1586,6 +1589,12 @@ items:
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：邮件已阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      console.log(`Appointment location: ${Office.context.mailbox.item.location}`);
+      ```
     name: location
     fullName: location
     langs:
@@ -1609,8 +1618,7 @@ items:
       #### <a name="examples"></a>示例
 
       ```javascript
-      var normalizedSubject = Office.context.mailbox.item.normalizedSubject;
-      console.log("Normalized subject: " + normalizedSubject);
+      console.log(`Normalized subject: ${Office.context.mailbox.item.normalizedSubject}`);
       ```
     name: normalizedSubject
     fullName: normalizedSubject
@@ -1720,7 +1728,7 @@ items:
       } else if (recurrence === null) {
         console.log("This is a single appointment.");
       } else {
-        console.log(recurrence);
+        console.log(JSON.stringify(recurrence));
       }
       ```
     name: recurrence
