--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.bindingselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.bindingselectionchangedeventargs.yml
@@ -2,7 +2,9 @@
 items:
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs:interface'
     summary: |-
-      提供有关引发了 SelectionChanged 事件的绑定的信息。
+      提供有关引发 "SelectionChanged" 事件的选定内容的信息。
+
+      **注意**：如果选择了多个不连续的`Binding.onSelectionChanged`单元格，则仅报告一个选定内容的行和列信息。 `Worksheet.onSelectionChanged`用于多个选定区域。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.BindingSelectionChangedEventArgs
