--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.binding.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.binding.yml
@@ -291,6 +291,8 @@ items:
     summary: |-
       当绑定中的所选内容更改时发生。
 
+      **注意**：如果选择了多个不连续的`Binding.onSelectionChanged`单元格，则仅报告一个选定内容的行和列信息。 `Worksheet.onSelectionChanged`用于多个选定区域。
+
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onSelectionChanged
     fullName: onSelectionChanged
