--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -148,7 +148,7 @@ items:
             uid: 'outlook!Office.SeriesTime:interface'
           - name: SharedProperties
             uid: 'outlook!Office.SharedProperties:interface'
-          - name: Subject
+          - name: 主题
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
@@ -242,7 +242,7 @@ items:
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
-              - name: Context
+              - name: 上下文
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
@@ -262,11 +262,11 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: 文档
+              - name: Document
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -342,7 +342,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
@@ -373,23 +373,9 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
-              - name: 控制
-                uid: 'office-runtime!OfficeRuntime.Control:interface'
               - name: 对话框
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 库
-                uid: 'office-runtime!OfficeRuntime.Gallery:interface'
-              - name: MenuControl
-                uid: 'office-runtime!OfficeRuntime.MenuControl:interface'
-              - name: 功能区
-                uid: 'office-runtime!OfficeRuntime.Ribbon:interface'
-              - name: RibbonUpdaterData
-                uid: 'office-runtime!OfficeRuntime.RibbonUpdaterData:interface'
               - name: 存储
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
-              - name: Tab
-                uid: 'office-runtime!OfficeRuntime.Tab:interface'
-              - name: UI
-                uid: 'office-runtime!OfficeRuntime.UI:interface'
