--- a/docs/docs-ref-autogen/powerpoint/toc.yml
+++ b/docs/docs-ref-autogen/powerpoint/toc.yml
@@ -92,7 +92,7 @@ items:
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
-              - name: Context
+              - name: 上下文
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
@@ -112,7 +112,7 @@ items:
                 uid: 'office!Office.DialogOptions:interface'
               - name: DialogParentMessageReceivedEventArgs
                 uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
-              - name: 文档
+              - name: Document
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
@@ -223,23 +223,9 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
-              - name: 控制
-                uid: 'office-runtime!OfficeRuntime.Control:interface'
               - name: 对话框
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 库
-                uid: 'office-runtime!OfficeRuntime.Gallery:interface'
-              - name: MenuControl
-                uid: 'office-runtime!OfficeRuntime.MenuControl:interface'
-              - name: 功能区
-                uid: 'office-runtime!OfficeRuntime.Ribbon:interface'
-              - name: RibbonUpdaterData
-                uid: 'office-runtime!OfficeRuntime.RibbonUpdaterData:interface'
               - name: 存储
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
-              - name: Tab
-                uid: 'office-runtime!OfficeRuntime.Tab:interface'
-              - name: UI
-                uid: 'office-runtime!OfficeRuntime.UI:interface'
