--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.internetheaders.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.internetheaders.yml
@@ -10,6 +10,16 @@ items:
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
+      **建议的做法**
+
+      目前，internet 邮件头是用户邮箱的有限资源。 当配额耗尽时，您不能在该邮箱上创建更多的 internet 标头，这可能导致依赖于此的客户端的意外行为能够正常运行。
+
+      在外接程序中创建 internet 邮件头时，请应用以下准则。
+
+      - 创建所需的最小标头数。
+
+      - 名称标头，以便以后可以重复使用和更新其值。 因此，应避免以变量方式命名标头（例如，基于用户输入、时间戳等）。
+
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写
