--- a/docs/docs-ref-autogen/excel/excel/excel.pagebreak.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pagebreak.yml
@@ -8,7 +8,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PageBreak#columnIndex:member'
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.PageBreak#toJSON:member(1)'
   - uid: 'excel!Excel.PageBreak#columnIndex:member'
     summary: |-
-      表示分页符的列索引
+      指定分页符的列索引
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -143,7 +143,7 @@ items:
                       }
   - uid: 'excel!Excel.PageBreak#rowIndex:member'
     summary: |-
-      表示分页符的行索引
+      指定分页符的行索引
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -170,7 +170,7 @@ items:
           - 'excel!Excel.Interfaces.PageBreakData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
