--- a/docs/docs-ref-autogen/excel/excel/excel.style.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.style.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Style#autoIndent:member'
@@ -47,7 +47,7 @@ items:
       - 'excel!Excel.Style#wrapText:member'
   - uid: 'excel!Excel.Style#autoIndent:member'
     summary: |-
-      指示将单元格中的文本对齐方式设为相等分布时文本是否会自动缩进。
+      指定当单元格中文本的对齐方式设置为相等分布时，文本是否自动缩进。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
@@ -77,7 +77,7 @@ items:
           - 'excel!Excel.RangeBorderCollection:class'
   - uid: 'excel!Excel.Style#builtIn:member'
     summary: |-
-      指示样式是否为内置样式。
+      指定样式是否为内置样式。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: builtIn
@@ -190,7 +190,7 @@ items:
           ```
   - uid: 'excel!Excel.Style#formulaHidden:member'
     summary: |-
-      指示工作表受保护时是否隐藏公式。
+      指定在工作表处于保护状态时是否隐藏公式。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
@@ -239,7 +239,7 @@ items:
           ```
   - uid: 'excel!Excel.Style#includeAlignment:member'
     summary: |-
-      指示样式是否包含 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
+      指定样式是否包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
@@ -254,7 +254,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Style#includeBorder:member'
     summary: |-
-      指示样式是否包含 Color、ColorIndex、LineStyle 和 Weight 边框属性。
+      指定样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
@@ -269,7 +269,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Style#includeFont:member'
     summary: |-
-      指示样式是否包含 Background、Bold、Color、ColorIndex、FontStyle、Italic、Name、Size、Strikethrough、Subscrip、Superscript 和 Underline 字体属性。
+      指定样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
@@ -284,7 +284,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Style#includeNumber:member'
     summary: |-
-      指示样式是否包含 NumberFormat 属性。
+      指定样式是否包含 NumberFormat 属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
@@ -299,7 +299,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Style#includePatterns:member'
     summary: |-
-      指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
+      指定样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
@@ -314,7 +314,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Style#includeProtection:member'
     summary: |-
-      指示样式是否包含 FormulaHidden 和 Locked 保护属性。
+      指定样式是否包含 FormulaHidden 和 Locked 保护属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
@@ -428,7 +428,7 @@ items:
                       }
   - uid: 'excel!Excel.Style#locked:member'
     summary: |-
-      指示工作表受保护时是否锁定对象。
+      指定在工作表处于保护状态时是否锁定对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
@@ -526,7 +526,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Style#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -547,7 +547,7 @@ items:
             - 'excel!Excel.Style:class'
   - uid: 'excel!Excel.Style#shrinkToFit:member'
     summary: |-
-      指示文本是否自动缩小以适合可用列宽。
+      指定文本是否自动收缩以显示可用列宽。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
@@ -590,7 +590,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Style#verticalAlignment:member'
     summary: |-
-      表示样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+      指定样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
@@ -605,7 +605,7 @@ items:
           - 'excel!Excel.Style#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Style#wrapText:member'
     summary: |-
-      指示 Microsoft Excel 是否将对象中的文本换行。
+      指定 Excel 是否对对象中的文本进行换行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
@@ -619,7 +619,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RangeBorderCollection:class'
     name: Excel.RangeBorderCollection
@@ -653,7 +653,7 @@ references:
         fullName: ' | "Context" | "LeftToRight" | "RightToLeft"'
   - uid: 'excel!Excel.Interfaces.StyleUpdateData:interface'
     name: Interfaces.StyleUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.StyleData:interface'
     name: Excel.Interfaces.StyleData
