--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookdata.yml
@@ -25,6 +25,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#protection:member'
       - 'excel!Excel.Interfaces.WorkbookData#readOnly:member'
       - 'excel!Excel.Interfaces.WorkbookData#settings:member'
+      - 'excel!Excel.Interfaces.WorkbookData#showPivotFieldList:member'
       - 'excel!Excel.Interfaces.WorkbookData#slicers:member'
       - 'excel!Excel.Interfaces.WorkbookData#slicerStyles:member'
       - 'excel!Excel.Interfaces.WorkbookData#styles:member'
@@ -36,7 +37,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#autoSave:member'
     summary: |-
-      指定工作簿是否处于自动保存模式。 只读。
+      指定工作簿是否处于自动保存模式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSave
@@ -51,7 +52,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      表示属于工作簿的绑定的集合。 只读。
+      表示属于工作簿的绑定的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
@@ -66,7 +67,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#calculationEngineVersion:member'
     summary: |-
-      返回有关 Excel 计算引擎的版本号。 只读。
+      返回有关 Excel 计算引擎的版本号。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
@@ -96,7 +97,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#comments:member'
     summary: |-
-      表示与工作簿关联的批注集合。 只读。
+      表示与工作簿关联的批注集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -111,7 +112,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#comments~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#customXmlParts:member'
     summary: |-
-      表示此工作簿包含的自定义 XML 部件的集合。 只读。
+      表示此工作簿包含的自定义 XML 部件的集合。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customXmlParts
@@ -126,7 +127,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#customXmlParts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#isDirty:member'
     summary: |-
-      指定自上次保存以来是否对指定的工作簿进行任何更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
@@ -141,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -156,7 +157,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -171,7 +172,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      表示一组与 workbook 相关联的 PivotTable 对象。 只读。
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -186,7 +187,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 PivotTableStyles。 只读。
+      表示一组与工作簿相关联的 PivotTableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTableStyles
@@ -201,7 +202,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTableStyles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#previouslySaved:member'
     summary: |-
-      指定工作簿是否已在本地或在线保存。 只读。
+      指定是否曾在本地或联机保存工作簿。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: previouslySaved
@@ -216,7 +217,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#properties:member'
     summary: |-
-      获取工作簿属性。 只读。
+      获取工作簿属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
@@ -231,7 +232,7 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#protection:member'
     summary: |-
-      返回工作簿的工作簿保护对象。 只读。
+      返回工作簿的工作簿保护对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -246,7 +247,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#readOnly:member'
     summary: |-
-      如果在只读模式下打开工作簿，则为 True。 只读。
+      如果在只读模式下打开工作簿，则为 True。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
@@ -261,7 +262,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      表示一组与 workbook 相关联的 setting 对象。 只读。
+      表示一组与 workbook 相关联的 setting 对象。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
@@ -274,9 +275,25 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
+  - uid: 'excel!Excel.Interfaces.WorkbookData#showPivotFieldList:member'
+    summary: |-
+      指定是否在工作簿级别显示数据透视表的 "字段列表" 窗格。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: showPivotFieldList
+    fullName: showPivotFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showPivotFieldList?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#slicers:member'
     summary: |-
-      表示与工作簿关联的切片器集合。 只读。
+      表示与工作簿关联的切片器集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicers
@@ -291,7 +308,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#slicers~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#slicerStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 SlicerStyles。 只读。
+      表示一组与工作簿相关联的 SlicerStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicerStyles
@@ -306,7 +323,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#slicerStyles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#styles:member'
     summary: |-
-      表示与工作簿关联的样式的集合。 只读。
+      表示与工作簿关联的样式的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: styles
@@ -321,7 +338,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#styles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      表示与工作簿关联的表的集合。 只读。
+      表示与工作簿关联的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -336,7 +353,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TableStyles。 只读。
+      表示一组与工作簿相关联的 TableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tableStyles
@@ -351,7 +368,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tableStyles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#timelineStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TimelineStyles。 只读。
+      表示一组与工作簿相关联的 TimelineStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: timelineStyles
@@ -397,7 +414,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      表示与工作簿关联的工作表的集合。 只读。
+      表示与工作簿关联的工作表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
