--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rangedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rangedata.yml
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.RangeData#valueTypes:member'
   - uid: 'excel!Excel.Interfaces.RangeData#address:member'
     summary: |-
-      表示 A1 样式的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。 只读。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -40,7 +40,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeData#addressLocal:member'
     summary: |-
-      以用户语言表示对指定区域的区域引用。 只读。
+      以用户语言指定区域的区域引用。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -55,7 +55,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeData#cellCount:member'
     summary: |-
-      范围中的单元格数。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。 只读。
+      指定区域中的单元格的数目。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -70,7 +70,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeData#columnCount:member'
     summary: |-
-      表示区域中的列总数。 只读。
+      指定区域中的总列数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -85,7 +85,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeData#columnIndex:member'
     summary: |-
-      表示区域中第一个单元格的列编号。 从零开始编制索引。 只读。
+      指定区域中的第一个单元格的列号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -100,7 +100,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeData#format:member'
     summary: |-
-      返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。 只读。
+      返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -160,7 +160,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeData#rowCount:member'
     summary: |-
-      返回区域中的总行数。 只读。
+      返回区域中的总行数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -175,7 +175,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeData#rowIndex:member'
     summary: |-
-      返回区域中第一个单元格的行编号。 从零开始编制索引。 只读。
+      返回区域中第一个单元格的行编号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -190,7 +190,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeData#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -220,7 +220,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeData#valueTypes:member'
     summary: |-
-      表示每个单元格的数据类型。 只读。
+      指定每个单元格中的数据类型。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
