--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tableupdatedata.yml
@@ -32,7 +32,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableUpdateData#showHeaders:member'
     summary: |-
-      指示标头行是否可见。 该值可以设置为显示或删除标头行。
+      指定标题行是否可见。 该值可以设置为显示或删除标头行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeaders
@@ -47,7 +47,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableUpdateData#showTotals:member'
     summary: |-
-      指示总计行是否可见。 该值可以设置为显示或删除总计行。
+      指定汇总行是否可见。 该值可以设置为显示或删除总计行。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showTotals
