commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel/excel.textrange.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.textrange.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.TextRange:class'
     summary: |-
-      <span data-ttu-id="d588b-101">包含附加到形状上的文本，以及用于操作文本的属性和方法。</span><span class="sxs-lookup"><span data-stu-id="d588b-101">Contains the text that is attached to a shape, in addition to properties and methods for manipulating the text.</span></span>
+      包含附加到形状上的文本，以及用于操作文本的属性和方法。
 
-      <span data-ttu-id="d588b-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d588b-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TextRange
     fullName: Excel.TextRange
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TextRange#context:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.TextRange#text:member'
       - 'excel!Excel.TextRange#toJSON:member(1)'
   - uid: 'excel!Excel.TextRange#context:member'
-    summary: <span data-ttu-id="d588b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d588b-103">The request context associated with the object.</span></span> <span data-ttu-id="d588b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="d588b-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TextRange#font:member'
     summary: |-
-      <span data-ttu-id="d588b-105">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-105">Returns a ShapeFont object that represents the font attributes for the text range.</span></span> <span data-ttu-id="d588b-106">只读。</span><span class="sxs-lookup"><span data-stu-id="d588b-106">Read-only.</span></span>
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。
 
-      <span data-ttu-id="d588b-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d588b-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.ShapeFont:class'
   - uid: 'excel!Excel.TextRange#getSubstring:member(1)'
     summary: |-
-      <span data-ttu-id="d588b-108">返回给定区域内子字符串的 TextRange 对象。</span><span class="sxs-lookup"><span data-stu-id="d588b-108">Returns a TextRange object for the substring in the given range.</span></span>
+      返回给定区域内子字符串的 TextRange 对象。
 
-      <span data-ttu-id="d588b-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d588b-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'getSubstring(start, length)'
     fullName: 'getSubstring(start, length)'
     langs:
@@ -69,15 +69,15 @@ items:
         description: ''
       parameters:
         - id: start
-          description: <span data-ttu-id="d588b-110">从文本范围中获取的第一个字符的从零开始的索引。</span><span class="sxs-lookup"><span data-stu-id="d588b-110">The zero-based index of the first character to get from the text range.</span></span>
+          description: 从文本范围中获取的第一个字符的从零开始的索引。
           type:
             - number
         - id: length
-          description: '<span data-ttu-id="d588b-111">可选。</span><span class="sxs-lookup"><span data-stu-id="d588b-111">Optional.</span></span> <span data-ttu-id="d588b-112">要在新文本范围中返回的字符数。</span><span class="sxs-lookup"><span data-stu-id="d588b-112">The number of characters to be returned in the new text range.</span></span> <span data-ttu-id="d588b-113">如果省略 length，则将返回从文本范围的最后一段的最后一段的末尾开始的所有字符。</span><span class="sxs-lookup"><span data-stu-id="d588b-113">If length is omitted, all the characters from start to the end of the text range''s last paragraph will be returned.</span></span>'
+          description: 可选。 要在新文本范围中返回的字符数。 如果省略 length，则将返回从文本范围的最后一段的最后一段的末尾开始的所有字符。
           type:
             - number
   - uid: 'excel!Excel.TextRange#load:member(1)'
-    summary: <span data-ttu-id="d588b-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d588b-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d588b-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -91,11 +91,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="d588b-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="d588b-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.TextRangeLoadOptions:interface'
   - uid: 'excel!Excel.TextRange#load:member(2)'
-    summary: <span data-ttu-id="d588b-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d588b-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d588b-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -109,11 +109,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="d588b-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.TextRange#load:member(3)'
-    summary: <span data-ttu-id="d588b-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d588b-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d588b-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -131,7 +131,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="d588b-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -139,9 +139,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.TextRange#set:member(1)'
-    summary: '<span data-ttu-id="d588b-123">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-123">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="d588b-124">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="d588b-124">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="d588b-125">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="d588b-125">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.TextRange): void`
     name: 'set(properties, options)'
@@ -157,15 +157,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="d588b-126">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-126">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.TextRangeUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="d588b-127">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="d588b-127">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.TextRange#set:member(2)'
-    summary: '<span data-ttu-id="d588b-128">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="d588b-128">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -184,9 +184,9 @@ items:
             - 'excel!Excel.TextRange:class'
   - uid: 'excel!Excel.TextRange#text:member'
     summary: |-
-      <span data-ttu-id="d588b-129">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="d588b-129">Represents the plain text content of the text range.</span></span>
+      表示文本范围的纯文本内容。
 
-      <span data-ttu-id="d588b-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d588b-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -198,7 +198,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.TextRange#toJSON:member(1)'
-    summary: '<span data-ttu-id="d588b-131">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="d588b-131">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="d588b-132">.</span><span class="sxs-lookup"><span data-stu-id="d588b-132"></span></span> <span data-ttu-id="d588b-133">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="d588b-133"></span></span><!-- --><span data-ttu-id="d588b-134">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. TextRange 对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.TextRangeData`</span><span class="sxs-lookup"><span data-stu-id="d588b-134">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.TextRange object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.TextRangeData`</span></span><!-- --><span data-ttu-id="d588b-135">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="d588b-135">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. TextRange 对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.TextRangeData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -211,7 +211,7 @@ items:
           - 'excel!Excel.Interfaces.TextRangeData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -223,7 +223,7 @@ references:
     name: Excel.Interfaces.TextRangeLoadOptions
   - uid: 'excel!Excel.Interfaces.TextRangeUpdateData:interface'
     name: Interfaces.TextRangeUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.TextRangeData:interface'
     name: Excel.Interfaces.TextRangeData
