--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeborderloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="46801-101">代表对象的边框。</span><span class="sxs-lookup"><span data-stu-id="46801-101">Represents the border of an object.</span></span>
+      代表对象的边框。
 
-      <span data-ttu-id="46801-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeBorderLoadOptions
     fullName: Excel.Interfaces.RangeBorderLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.RangeBorderLoadOptions#tintAndShade:member'
       - 'excel!Excel.Interfaces.RangeBorderLoadOptions#weight:member'
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#$all:member'
-    summary: '<span data-ttu-id="46801-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="46801-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="46801-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="46801-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="46801-105">).</span><span class="sxs-lookup"><span data-stu-id="46801-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="46801-106">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="46801-106">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="46801-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#sideIndex:member'
     summary: |-
-      <span data-ttu-id="46801-108">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="46801-108">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="46801-109">有关详细信息，请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="46801-109">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="46801-110">只读。</span><span class="sxs-lookup"><span data-stu-id="46801-110">Read-only.</span></span>
+      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
-      <span data-ttu-id="46801-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="46801-112">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="46801-112">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="46801-113">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="46801-113">See Excel.BorderLineStyle for details.</span></span>
+      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      <span data-ttu-id="46801-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="46801-115">返回或设置一个使区域边框的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="46801-115">Returns or sets a double that lightens or darkens a color for Range Border, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="46801-116">空值表示边框没有统一的 tintAndShade 设置。</span><span class="sxs-lookup"><span data-stu-id="46801-116">A null value indicates that the border doesn't have uniform tintAndShade setting.</span></span>
+      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
-      <span data-ttu-id="46801-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#weight:member'
     summary: |-
-      <span data-ttu-id="46801-118">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="46801-118">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="46801-119">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="46801-119">See Excel.BorderWeight for details.</span></span>
+      指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
 
-      <span data-ttu-id="46801-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46801-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
